--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "mongodb/mongodb": "^1.15"
+        "mongodb/mongodb": "^1.15",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
